--- a/C31A04PHP/styles/main.css
+++ b/C31A04PHP/styles/main.css
@@ -8,6 +8,10 @@ body {
 a {
     text-decoration: none;
     color: #000;
+    padding-bottom: 7px;
+    font-weight: bold;
+    border-bottom: solid 1px #333;
+    display: block;
 }
 
 header {
@@ -44,7 +48,8 @@ input, select {
 
 input[type="text"], select {
     height: 1.5em;
-
+    width: 300px;
+    margin: auto;
 }
 
 input[type="submit"] {
@@ -69,11 +74,14 @@ label {
     border-bottom-right-radius: 10px;
     padding: 20px;
     text-align: left;
+    overflow-wrap: break-word;
 }
 
 
-.task>h3 {
-    border-bottom: solid 1px #333;
+h4 {
+    display: inline-block;
+    margin-right: 10px;
+
 }
 
 .todo {
@@ -151,43 +159,3 @@ label {
 
 }
 
-
-/*
-body {
-    font-family: 'Montserrat', 'Calibri', sans-serif;
-    text-align: center;
-    margin: 0;
-}
-
-
-header>h3 {
-    color: #333333;
-    font-weight: normal;
-    font-style: italic;
-}
-
-form {
-    display: grid;
-    margin-bottom: 20px;
-    grid-template-columns: 3fr 1fr 3fr;
-    grid-column-gap: 10px;
-    justify-content: center;
-}
-
-
-@media screen and (min-width:768px) {
-    form {
-        margin: 40px auto 30px auto;
-        border: dashed 1px #000;
-        padding: 25px 20px 25px 20px;
-        width: 50%;
-    }
-
-    #tasks {
-        width: 85%;
-        grid-row-gap: 20px;
-        grid-column-gap: 20px;
-        grid-template-columns: repeat( auto-fill, minmax(300px, 1fr) );
-    }
-
-}*/
